--- a/dual_sketch.ipynb
+++ b/dual_sketch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -16,12 +16,12 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import os\n",
-    "os.chdir('/Users/sifanliu/Dropbox/Dual Sketch/experiments')"
+    "# os.chdir('/Users/sifanliu/Dropbox/Dual Sketch/experiments')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +252,7 @@
     "        R = np.random.randn(p, d) / sqrt(d)\n",
     "        # R = generate_haar_matrix(p, d)\n",
     "        beta_dual = X.T / n @ inv(X @ R @ R.T @ X.T / n + lbd * np.identity(n)) @ Y\n",
-    "        dual_simu_gaus[k, i] = norm(beta_dual - beta) ** 2"
+    "        dual_simu_gaus[k, i] = norm(beta_dual - beta) ** 2\n"
    ]
   },
   {
